Corrected handling of securities with no market data events in ManagementService